2007-08-23  Francis Kung  <fkung@redhat.com>

	* gnu/java/awt/peer/gtk/GtkComponentPeer.java:
	(getLocationOnScreen): Check for GTK main thread.
	(gtkWidgetGetLocationOnScreenUnlocked): New native method.
	(gtkWindowGetLocationOnScreenUnlocked): New native method.
	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_GtkComponentPeer.c:
	(Java_gnu_java_awt_peer_gtk_GtkComponentPeer_gtkWindowGetLocationOnScreen):
	Delegate to unlocked function.
	(Java_gnu_java_awt_peer_gtk_GtkComponentPeer_gtkWindowGetLocationOnScreenUnlocked):
	New function.
	(Java_gnu_java_awt_peer_gtk_GtkComponentPeer_gtkWidgetGetLocationOnScreen):
	Delegate to unlocked function.
	(Java_gnu_java_awt_peer_gtk_GtkComponentPeer_gtkWidgetGetLocationOnScreenUnlocked):
	New function.

2007-08-22  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* java/util/EnumSet.java:
	Documented.
	(complementOf(EnumSet)): Fixed to flip only
	the bits used by the enumset.
	
2007-08-20  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* vm/reference/java/lang/VMClass.java:
	(getCanonicalName(Class)): Fix handling of member
	classes so we don't fall out of the if block.
	(getSimpleName(Class)): Handle class names which include
	the $ sign to break up anonymous/inner/member classes.

2007-08-19  Mario Torre  <neugens@limasoftware.net>

	* gnu/javax/sound/sampled/gstreamer/io/GstAudioFileReader.java: 
	(getAudioFileFormat (File)): method implemented.
	(getAudioFileFormat (InputStream)): likewise.
	(getAudioFileFormat(InputStream, String)): new method.
	(getAudioInputStream): better exception handling.
	* gnu/javax/sound/sampled/gstreamer/io/GstAudioFileReaderNativePeer.java
	(getAudioFormat): added basic extension detection for known files.
	* gnu/javax/sound/sampled/gstreamer/GStreamerMixer.java:
	(BASIC_FORMATS): removed, unused.
	(GST_TYPE_NAME): new constant.
	(GST_FILE_EXTENSION): likewise.
	
2007-08-19  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* resource/META-INF/services/javax.sound.sampled.spi.AudioFileReader: